--- a/sass/components/_containers.scss
+++ b/sass/components/_containers.scss
@@ -70,6 +70,9 @@
                     border-style: solid;
                     border-color: transparent rgba(0,0,0,0.7) transparent transparent;
                 }
+                p{
+                    max-width: 170px;
+                }
             }
         }
         .task-label{
